syntax = "proto3";

package categories;

option csharp_namespace = "TimeKeep.RPC.Categories";

service CategoriesService {
	rpc List(ListRequest) returns (stream Category);
	rpc Create(CreateRequest) returns (CreateResponse);
	rpc Destroy(DestroyRequest) returns (DestroyResponse);
}

message ListRequest {
	Order order = 1;
}

enum Order {
	ORDER_ENTRIES_DESC = 0;
	ORDER_ENTRIES_ASC = 1;
}

message Category {
	string name = 1;
}

message CreateRequest {
	string name = 1;
}

message CreateResponse {
	CreateStatus status = 1;
}

enum CreateStatus {
	CREATE_STATUS_FAILURE = 0;
	CREATE_STATUS_SUCCESS = 1;
	CREATE_STATUS_CATEGORY_EXISTS = 2;
}

message DestroyRequest {
	string name = 1;
}

message DestroyResponse {
	DestroyStatus status = 1;
}

enum DestroyStatus {
	DESTROY_STATUS_FAILURE = 0;
	DESTROY_STATUS_SUCCESS = 1;
	DESTROY_STATUS_CATEGORY_NOT_FOUND = 2;
	DESTROY_STATUS_CATEGORY_IN_USE = 3;
}
